Fix nmap preview links
I think they've been broken in the history view for quite some time
because I wasn't using url_for and wasn't using absolute paths. Switched
up to use url_for and only link to full scan data where we have a scan
id present with which to address that scan.

--- a/natlas-server/app/static/css/dashboard.css
+++ b/natlas-server/app/static/css/dashboard.css
@@ -114,6 +114,7 @@ body {
   text-align:center;
   line-height:4em;
   margin-top:-4em;
+  color:#fff;
 }
 .preview_nmap:hover {
   background-color:rgba(0,0,0,0.75);
